--- a/web/hello.html
+++ b/web/hello.html
@@ -4,10 +4,31 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
+    <title>Hello World</title>
   </head>
+  <style>
+    html {
+      text-align: center;
+      background-color: midnightblue;
+      color: lightgreen;
+    }
+    h1 {
+      display: inline-block;
+      font-size: 5em;
+      padding-bottom: 0;
+      border-bottom: 0.08em dashed whitesmoke;
+    }
+    #world {
+      display: block;
+      border: 0.5em ridge lightgreen;
+      border-radius: 20px;
+      margin: auto;
+      margin-bottom: 5em;
+      box-shadow: 0.5em 0.5em 1em whitesmoke;
+    }
+  </style>
   <body>
     <h1>Hello World!</h1>
-    <img src="images/theworld.jpeg" alt="A picture of the Earth" />
+    <img src="images/theworld.jpeg" alt="A picture of the Earth" id="world" />
   </body>
 </html>
