divs and buttons created

--- a/web/TeamActivities/Act1.html
+++ b/web/TeamActivities/Act1.html
@@ -6,5 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Team Activity 1</title>
   </head>
-  <body></body>
+  <body>
+    <div><button>Click Me!</button></div>
+    <div><button>Click Me!</button></div>
+    <div><button>Click Me!</button></div>
+  </body>
 </html>
