start of CSS and JS

--- a/web/TeamActivities/Act1.html
+++ b/web/TeamActivities/Act1.html
@@ -4,11 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="css/act1.css" />
     <title>Team Activity 1</title>
   </head>
   <body>
-    <div><button>Click Me!</button></div>
-    <div><button>Click Me!</button></div>
-    <div><button>Click Me!</button></div>
+    <div id="div1" class="buttondivs">
+      <button onclick="Clicked()">Click Me!</button>
+    </div>
+    <div id="div2" class="buttondivs">
+      <button onclick="Clicked()">Click Me!</button>
+    </div>
+    <div id="div3" class="buttondivs">
+      <button onclick="Clicked()">Click Me!</button>
+    </div>
+    <script src="js/act1.js"></script>
   </body>
 </html>
