--- a/web/TeamActivities/Act1.html
+++ b/web/TeamActivities/Act1.html
@@ -9,6 +9,10 @@
   </head>
   <body>
     <div id="div1" class="buttondivs">
+      <label for="pickColor">Enter a color:</label>
+      <input type="text" id="pickColor" /><br />
+      <button id="colorButton" onclick="changeColor()">Change Color</button
+      ><br />
       <button onclick="Clicked()">Click Me!</button>
     </div>
     <div id="div2" class="buttondivs">
