--- a/web/TeamActivities/Act1.html
+++ b/web/TeamActivities/Act1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="../css/act1.css" />
+    <link rel="stylesheet" href="css/act1.css" />
     <title>Team Activity 1</title>
   </head>
   <body>
