hex colors instead of color names

--- a/web/TeamActivities/Act1.html
+++ b/web/TeamActivities/Act1.html
@@ -10,7 +10,7 @@
   <body>
     <div id="div1" class="buttondivs">
       <label for="pickColor">Enter a color:</label>
-      <input type="text" id="pickColor" /><br />
+      <input type="text" id="pickColor" placeholder="#cccccc" /><br />
       <button id="colorButton" onclick="changeColor()">Change Color</button
       ><br />
       <button onclick="Clicked()">Click Me!</button>
