changed color prompt

--- a/web/TeamActivities/Act1.html
+++ b/web/TeamActivities/Act1.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <div id="div1" class="buttondivs">
-      <label for="pickColor">Enter a color:</label>
-      <input type="text" id="pickColor" placeholder="#cccccc" /><br />
+      <label for="pickColor">Enter 6 digits:</label>
+      <input type="text" id="pickColor" placeholder="cccccc" /><br />
       <button id="colorButton" onclick="changeColor()">Change Color</button
       ><br />
       <button onclick="Clicked()">Click Me!</button>
